--- a/style.css
+++ b/style.css
@@ -172,14 +172,14 @@ nav .hamburger {
 
 /* Wrap fólie */
 .img6 {
-    background-image: url(./img/uvod_fotka_1.jpg);
+    background-image: url(./img/wrap_folia_10.jpg);
     background-size: cover;
     background-position: center center;
 }
 
 /* Okenné fólie */
 .img7 {
-    background-image: url(./img/uvod_fotka_1.jpg);
+    background-image: url(./img/okenne_folie_3.jpg);
     background-size: cover;
     background-position: center center;
 }
