--- a/style.css
+++ b/style.css
@@ -262,7 +262,14 @@ nav .hamburger {
 /* Section Naša práca */
 .slider {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0;
+}
+
+.slider h2 {
+    font-size: 50px;
+    margin: 30px 0;
 }
 
 .wrapper {
@@ -323,6 +330,7 @@ nav .hamburger {
 }
 
 
+
 /* Google maps */
 
 .find-us {
@@ -334,6 +342,40 @@ nav .hamburger {
 .find-us-right {
     font-size: 20px;
 }
+
+/* Section Formulár */
+
+.form {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    
+}
+
+.form input ,.form textarea {
+    color: black;
+    font-size: 18px;
+    padding: 12px 8px;
+    border-radius: 20px;
+    width: 500px;
+    outline: none;
+}
+
+.form button {
+    color: black;
+    font-size: 18px;
+    padding: 10px 0;
+    width: 200px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.form button:hover {
+    box-shadow: 0 0 30px white;
+}
+
 
 /* Footer */
 
