--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ nav .hamburger {
     padding: 20px 0;
     margin: 30px 0;
     display: grid;
-    grid-template-columns: repeat(3, 300px);
-    gap: 15px;
+    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
+    gap: 30px;
     justify-content: center;
     overflow: hidden;
 }
