--- a/style.css
+++ b/style.css
@@ -126,11 +126,11 @@ nav .hamburger {
 
 
 .sluzby-pictures {
-    padding: 20px 0;
     margin: 30px 0;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
-    gap: 30px;
+    gap: 15px;
     justify-content: center;
     overflow: hidden;
 }
