--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 720px;
+    width: 100vw;
+    height: 100vh;
 }
 
 .onasbtn {
