--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
