--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     color: #fff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
     background-color: var(--black);
     font-family: "Segoe UI";
